<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UFO Bottle</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="tryAgain">Try Again</string>
    <string name="fill">Fill</string>
    <string name="message"></string>
    <string name="scanQR">Scan QR code on the bottom of the bottle.</string>
    <string name="eNoBottle">Poorly seated bottle</string>
    <string name="title_activity_success">Success</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thanks">Completed, take the bottle.\n\nThanks for using our services.</string>
    <string name="title_activity_database_error">DatabaseError</string>
    <string name="eNoData">Such code doen\'t exist in database.</string>
    <string name="english">English</string>
    <string name="lithuanian">Lietuviškai</string>
	<string name="instruction">Unscrew stopper,\ninsert bottle\nand press \"Fill\"</string>
	<string name="bottle">Bottle</string>
	<string name="leftfills">Fills left</string>
</resources>
