<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rain"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/klaidaDatabase"
        android:layout_width="664dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:background="@color/black_overlay"
        android:gravity="center"
        android:text="@string/eNoData"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="60sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginRight="20dp" >

        <Button
            android:id="@+id/homeerror"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:text="@string/home"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="35sp"
            android:typeface="monospace" />


        <Button
            android:id="@+id/backerror"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="250dp"
            android:text="@string/tryAgain"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="35sp"
            android:typeface="monospace" />

    </RelativeLayout>

</LinearLayout>