<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rain" >

    <VideoView
        android:id="@+id/video2"
        android:layout_width="405dp"
        android:layout_height="720dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="100dp" />

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginRight="20dp" >

        <Button
            android:id="@+id/home"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:text="@string/home"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="35sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/serverStatus"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />

        <Button
            android:id="@+id/back"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_above="@+id/home"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="19dp"
            android:text="@string/back"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="35sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/fill"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="150dp"
            android:text="@string/fill"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="75sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </RelativeLayout>

	<TextView
	    android:id="@+id/info"
	    android:layout_width="600dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="top"
	    android:layout_margin="10dp"
	    android:background="@color/black_overlay"
	    android:gravity="center_horizontal"
	    android:text="Buteliukas: 99999\nLiko užpildymų: 999"
	    android:textColor="@android:color/primary_text_dark"
	    android:textSize="44sp" />

	<TextView
	    android:id="@+id/instruction"
	    android:layout_width="600dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:layout_margin="10dp"
	    android:background="@color/black_overlay"
	    android:gravity="center_horizontal"
	    android:text="@string/instruction"
	    android:textColor="@android:color/primary_text_dark"
	    android:textSize="40sp" />

</FrameLayout>